# aoc.rs

./: .gitignore  Cargo.toml  Justfile  shell.nix
2021/: Cargo.toml  README.md
2021/day-01/: Cargo.toml
2021/day-01/benches/: benchmarks.rs
2021/day-01/src/: p1.rs  p2.rs  parser.rs
2021/day-02/: Cargo.toml
2021/day-02/benches/: benchmarks.rs
2021/day-02/src/: p1.rs  p2.rs  parser.rs
2021/day-03/: Cargo.toml
2021/day-03/benches/: benchmarks.rs
2021/day-03/src/: p1.rs  p2.rs  parser.rs
2021/day-04/: Cargo.toml
2021/day-04/benches/: benchmarks.rs
2021/day-04/src/: p1.rs  p2.rs  parser.rs
2021/day-05/: Cargo.toml
2021/day-05/benches/: benchmarks.rs
2021/day-06/: Cargo.toml
2021/day-07/: Cargo.toml
2021/day-08/: Cargo.toml
2021/day-09/: Cargo.toml
2021/day-10/: Cargo.toml
2021/day-11/: Cargo.toml
2022/: Cargo.toml  Justfile  README.md  shell.nix
2022/day-01/: Cargo.toml
2022/day-02/: Cargo.toml
2022/day-03/: Cargo.toml
2022/day-04/: Cargo.toml
2022/day-05/: Cargo.toml
2022/day-06/: Cargo.toml
2022/day-07/: Cargo.toml
2022/day-08/: Cargo.toml
2022/day-09/: Cargo.toml
2022/day-10/: Cargo.toml
2022/day-11/: Cargo.toml
2022/day-12/: Cargo.toml
2022/day-13/: Cargo.toml
2022/day-14/: Cargo.toml
2022/day-15/: Cargo.toml
2022/day-15/benches/: benchmarks.rs
2022/day-15/src/: p1.rs  p2.rs  parser.rs
2022/day-16/: Cargo.toml
2022/day-17/: Cargo.toml
2022/day-18/: Cargo.toml
2022/day-19/: Cargo.toml
2022/day-20/: Cargo.toml
2022/day-21/: Cargo.toml
2022/day-23/: Cargo.toml
2022/day-24/: Cargo.toml
2022/day-24/benches/: benchmarks.rs
2022/day-24/src/: p1.rs  p2.rs  parser.rs
2022/template/: Cargo.toml
2023/: Cargo.toml  README.md  shell.nix
2023/day-04/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-09/: Cargo.toml
2023/day-12/: Cargo.toml
2023/day-15/: Cargo.toml
2023/day-17/: Cargo.toml
2023/day-22/: README.md
2023/day-24/: Cargo.toml
2023/day-25/: Cargo.toml
2024/: Cargo.toml  Justfile  README.md
2024/day-01/: Cargo.toml
2024/day-02/: Cargo.toml
2024/day-03/: Cargo.toml
2024/day-04/: Cargo.toml
2024/day-05/: Cargo.toml
2024/day-05/src/: main.rs  p1.rs  p2.rs  parser.rs  structs.rs
2024/day-06/: Cargo.toml
2024/day-07/: Cargo.toml
2024/day-07/src/: main.rs  p1.rs  p2.rs  parser.rs  structs.rs
2024/day-08/: Cargo.toml
2024/day-09/: Cargo.toml  part1.rb  part2.rb
2024/day-10/: Cargo.toml
2024/day-11/: Cargo.toml
2024/day-12/: Cargo.toml
2024/day-13/: Cargo.toml
2024/day-13/benches/: benchmarks.rs
2024/day-13/src/: lib.rs  p1.rs  p2.rs  parser.rs
2024/day-14/: Cargo.toml
2024/day-15/: Cargo.toml
2024/day-16/: Cargo.toml
2024/day-16/benches/: benchmarks.rs
2024/day-16/src/: p1.rs  p2.rs  parser.rs
2024/day-17/: Cargo.toml
2024/day-18/: Cargo.toml
2024/day-19/: Cargo.toml
2024/day-19/benches/: benchmarks.rs
2024/day-19/src/: p1.rs  p2.rs  parser.rs
2024/day-20/: Cargo.toml
2024/day-21/: Cargo.toml
2024/day-22/: Cargo.toml  hash.py
2024/day-22/src/: p1.rs  p2.rs  parser.rs
2024/day-23/: Cargo.toml
2024/day-23/benches/: benchmarks.rs
2024/day-23/src/: p1.rs  p2.rs  parser.rs
2024/day-24/: Cargo.toml  charsort.rb  graph_manip.rb  make_adder.rb  normalize.rb  txt.rb
2024/day-24/benches/: benchmarks.rs
2024/day-24/src/: p1.rs  p2.rs  parser.rs
2024/day-25/: Cargo.toml
2024/template/: Cargo.toml
day-01/: Cargo.toml
day-01/src/: main.rs  part1.rs
day-02/: Cargo.toml
day-02/src/: main.rs  parser.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: parser.rs  part1.rs  part2.rs
day-04/src/: main.rs  parser.rs
day-05/: Cargo.toml
day-05/src/: parser.rs  part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: main.rs  parser.rs
day-07/src/: main.rs  part1.rs  part2.rs  structs.rs
day-08/: Cargo.toml
day-08/src/: main.rs  parser.rs  part1.rs  part2.rs  structs.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: structs.rs
day-12/src/: main.rs  parser.rs  part1.rs  part2.rs  structs.rs
day-13/: Cargo.toml
day-13/src/: parser.rs  part2.rs
day-14/: Cargo.toml
day-14/src/: main.rs  part2.rs
day-15/src/: main.rs  parser.rs  part1.rs  part2.rs
day-16/: Cargo.toml
day-17/src/: main.rs  part1.rs  structs.rs
day-18/: Cargo.toml
day-18/src/: main.rs  parser.rs  part1.rs
day-19/: Cargo.toml
day-19/src/: main.rs  part1.rs  part2.rs  structs.rs
day-20/: Cargo.toml
day-20/src/: parser.rs  part1.rs  part2.rs  structs.rs
day-21/: Cargo.toml
day-21/src/: main.rs  parser.rs  part1.rs  part2.rs
day-22/: Cargo.toml
day-22/src/: bvh.rs  main.rs  parser.rs  part1.rs  part2.rs  structs.rs
day-23/: Cargo.toml
day-23/src/: main.rs  part1.rs  part2.rs
day-24/: Cargo.toml  day24.py
day-24/src/: main.rs  parser.rs  part1.rs  part2.rs  structs.rs
day-25/: Cargo.toml
day-25/src/: parser.rs
scripts/: aoc-load.rs
template/: Cargo.toml
template/src/: part1.rs  part2.rs
(+287 files in other folders)
