[package]
name = "day-15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rangetools = "0.1.4"
utility-belt.workspace = true
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day-15"
path = "benches/benchmarks.rs"
harness = false
