[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow.workspace = true
utility-belt.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
petgraph = "0.6.5"

[features]
p1 = []
p2 = []
