[package]
name = "day-13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow.workspace = true
utility-belt.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1.11.1"
cached = "0.54.0"
glam = "0.29.2"
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day-13"
path = "benches/benchmarks.rs"
harness = false
