[package]
name = "day-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow.workspace = true
utility-belt.workspace = true
pathfinding = "4.12.0"

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day-16"
path = "benches/benchmarks.rs"
harness = false
