[package]
name = "day-19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow.workspace = true
utility-belt.workspace = true
cached = "0.54.0"

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day-19"
path = "benches/benchmarks.rs"
harness = false
