[package]
name = "day-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
utility-belt.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day-22"
path = "benches/benchmarks.rs"
harness = false
