[package]
name = "day-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.5"
utility-belt.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day-23"
path = "benches/benchmarks.rs"
harness = false
